# Cliporax

./: .gitignore  .npmrc  AGENTS.md  LICENSE  README.md  README.zh-CN.md  electron-mock.ts  index.html  package-lock.json  package.json  playwright.config.ts  test-insert.mjs  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: nightly.yml  release.yml
agent/skills/: code-review.md  git-hygiene.md
docs/: README.md  cli-usage.md  cloud-sync-architecture.md  plugin-system-design.md
plugins/com.cliporax.cloud-sync/: manifest.json  package-lock.json  package.json
plugins/com.cliporax.file-sync/: manifest.json
plugins/com.cliporax.imagepreview/: manifest.json  package-lock.json  package.json  tsconfig.json
plugins/com.cliporax.qrcode/: manifest.json  package-lock.json  package.json  test.html  tsconfig.json
plugins/com.cliporax.qrscanner/: manifest.json  package-lock.json  package.json  tsconfig.json
scripts/: build-plugins.mjs  bundle-plugins.mjs  install-cli.sh  install-plugins.mjs  prepare-cli-bin.mjs  set-version.mjs  tauri-before-dev.mjs
scripts/agent/: auto-debug.sh  collect-debug-artifacts.sh  cross-platform-check.sh  git-hygiene-check.sh  targeted-test.sh  tauri-smoke.sh
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/completions/: _cliporax  cliporax.bash
src-tauri/icons/: icon.icns
src-tauri/scripts/: generate_types.rs
src-tauri/src/: async_log_writer.rs  cli.rs  clipboard.rs  clipboard_test.rs  dev_log.rs  lib.rs  macos_permissions.rs  main.rs  portable.rs  settings.rs  test.rs  trace_context.rs  traced_mutex.rs  window_utils.rs
src-tauri/src/commands/: clipboard.rs  dev_log.rs  mod.rs  preview.rs  settings.rs  system.rs  tabs.rs  test.rs  window.rs
src-tauri/src/db/: database.rs  mod.rs  models.rs  repositories.rs  repositories_test.rs
src-tauri/src/file_sync/: commands.rs  mod.rs  models.rs  rows.rs  service.rs  snapshot.rs  validation.rs
src-tauri/src/plugin/: commands.rs  manifest.rs  market.rs  mod.rs  types.rs
src-tauri/src/plugin/lifecycle/: mod.rs  registry.rs  state.rs
src-tauri/src/plugin/market/: models.rs
src-tauri/src/plugin/permission/: checker.rs  definition.rs  mod.rs
src-tauri/src/state/: mod.rs  window_state.rs
src-tauri/src/sync/: change_log.rs  codec.rs  commands.rs  crypto.rs  engine.rs  error.rs  lock.rs  manifest.rs  mod.rs  models.rs  repository.rs  repository_profile.rs  repository_tabs.rs  scheduler.rs  secrets.rs  service.rs
src-tauri/src/sync/providers/: factory.rs  google_drive.rs  mod.rs  onedrive.rs  sftp.rs  webdav.rs
src-tauri/src/types/: api.rs  mod.rs
src/__tests__/: ClipboardCard.test.tsx  Combobox.test.tsx  ContentEditor.test.tsx  ContextMenu.test.tsx  TabBar.test.tsx  setup.ts  tauri-api.test.ts  trace-context.test.ts  uiStore.test.ts  useDataLoading.test.tsx  useMultiSelect.test.tsx
src/components/: BottomNavigation.tsx  ClipboardCard.tsx  Combobox.tsx  ConfirmDialog.tsx  ContentEditor.tsx  ContextMenu.tsx  PreviewWindow.tsx  ResizeHandles.tsx  Settings.tsx  SettingsWindow.tsx  TabBar.tsx  TitleBar.tsx  Toast.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useSettingsSync.ts
src/i18n/: index.ts
src/lib/: sync-api.ts  (+2 more)
(+80 files in other folders)
